// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dashboard-section the default example matches the snapshot 1`] = `
"<html><head></head><body><div class=\\"ccs-dashboard-section \\">
  <div class=\\"govuk-grid-row\\">
    <div class=\\"govuk-grid-column-full\\">
      <div class=\\"govuk-grid-row ccs-dashboard-section__container\\">
  <div class=\\"ccs-dashboard-section__panel govuk-grid-column-one-third \\">
    <a class=\\"ccs-dashboard-section__panel-title\\" href=\\"/search-for-suppliers\\">
      Search for suppliers
    </a>
    <p class=\\"ccs-dashboard-section__panel-description\\">
      Find a shortlist of suppliers who can provide services to your locations
    </p>
  </div>
  <div class=\\"ccs-dashboard-section__panel govuk-grid-column-one-third \\">
    <a class=\\"ccs-dashboard-section__panel-title\\" href=\\"/view-your-saved-searches\\">
      View your saved searches
    </a>
    <p class=\\"ccs-dashboard-section__panel-description\\">
      Open your dashboard to view your previously saved searches
    </p>
  </div>
      </div>
    </div>
  </div>
</div>
</body></html>"
`;

exports[`dashboard-section when there is a title matches the snapshot 1`] = `
"<html><head></head><body><div class=\\"ccs-dashboard-section \\">
  <div class=\\"govuk-grid-row\\">
    <div class=\\"govuk-grid-column-full\\">
        <h2 class=\\"ccs-dashboard-section__heading govuk-heading-m\\">
          Framework dashboard
        </h2>
        <hr class=\\"ccs-dashboard-section__heading-section-break govuk-section-break govuk-section-break--visible\\">
      <div class=\\"govuk-grid-row ccs-dashboard-section__container\\">
  <div class=\\"ccs-dashboard-section__panel govuk-grid-column-one-third \\">
    <a class=\\"ccs-dashboard-section__panel-title\\" href=\\"/search-for-suppliers\\">
      Search for suppliers
    </a>
    <p class=\\"ccs-dashboard-section__panel-description\\">
      Find a shortlist of suppliers who can provide services to your locations
    </p>
  </div>
  <div class=\\"ccs-dashboard-section__panel govuk-grid-column-one-third \\">
    <a class=\\"ccs-dashboard-section__panel-title\\" href=\\"/view-your-saved-searches\\">
      View your saved searches
    </a>
    <p class=\\"ccs-dashboard-section__panel-description\\">
      Open your dashboard to view your previously saved searches
    </p>
  </div>
      </div>
    </div>
  </div>
</div>
</body></html>"
`;
